# Explainable-AI-for-Skin-Cancer-Detection

./: .gitignore  Makefile  README.md  Untitled37.ipynb  pyproject.toml  requirements.txt
XAI/: __init__.py  config.py  dataset.py  explain_ml.py  features.py  plots.py  run_explainers.py
XAI/explainability/: lime_ml_explainer.py  model_helper.py  shap_ml_explainer.py  shape_ml_explainer.py  visualization_utils.py
XAI/explainers/: __init__.py  deconv_explainer.py  deconv_model.py  deconv_visualizer.py  explain_predictions.py  gradcam_explainer.py  lime_explainer.py  pdp_explainer.py  shap_explainer.py  test_gradcam.py
XAI/modeling/: AllModels.py  ResizeLayer.py  __init__.py  model.py  predict.py  predict_ml.py  train.py  train_ml.py
XAI/modeling/models/: Base_Model.py  (+13 more)
XAI/preprocessing/: C_LAHE.py  contrast_stretch.py  enhance_clarity.py  hair_removal.py
docs/: mkdocs.yml
docs/docs/: index.md
models/: DecisionTree_2025-05-01_18-21-48.pkl  DecisionTree_2025-05-01_18-21-48_params.txt
notebooks/: data_exploration.ipynb  dsai325-mahmoudelgohary.ipynb  explainability_demo.ipynb  initial-data-exploration.ipynb  mark_modelsImpementation.ipynb  model_explanation.ipynb
reports/figures/: classification_report.csv  classification_report_Custom_CNN.csv  classification_report_Custom_CNN_2.csv  classification_report_D2CNN.csv  classification_report_DecisionTree.csv  classification_report_FineTunedResNet50.csv  classification_report_ModifiedInceptionV3.csv  classification_report_RandomForest.csv  (+2 more)
temp_m/: RandomForest_2025-05-01_19-20-00_params.txt  ml_scaler.joblib
