[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "XAI"
version = "0.0.1"
description = "This project leverages machine learning and deep learning techniques for automated skin cancer classification using the HAM10000 dataset. It emphasizes model interpretability through Explainable AI (XAI) methods such as Grad-CAM, SHAP, and LIME, addressing the critical research gap in transparency and trustworthiness of AI-driven medical diagnostics."
authors = [
  { name = "The Glass Boxes" },
]

readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    
]
requires-python = "~=3.11.0"

[tool.black]
line-length = 99
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.venv
)/
'''

[tool.isort]
profile = "black"
known_first_party = ["XAI"]
force_sort_within_sections = true


